# iac-init

./: .gitignore  README.md  fabric_ip.txt  info  pyproject.toml
.github/workflows/: release.yml  test.yml
iac_init/: __init__.py  __main__.py  initiator.py  validator.py
iac_init/cli/: main.py  options.py
iac_init/conf/: __init__.py  global_settings.py
iac_init/scripts/: ansible_tool.py  apic_connecton_tool.py  cimc_precheck_tool.py  create_threadingpool.py  log_tool.py  logging_tool.py  ssh_tool.py  telnet_tool.py  thread_tool.py
iac_init/templates/01-fabric_bootstrap/: playbook_aci_switch_init.yaml
iac_init/templates/01-fabric_bootstrap/aci_switch_reimage/tasks/: main.yml
iac_init/templates/01-fabric_bootstrap/aci_switch_reimage/templates/: aci_switch_reimage.exp.jinja2
iac_init/templates/01-fabric_bootstrap/apic_reimage/templates/: apic_reimage4.exp.jinja2  apic_reimage5.exp.jinja2  apic_reimage6.exp.jinja2
iac_init/templates/01-wipe_aci_fabric/: cimc_precheck_tool.py  playbook_apic_init.yaml  testenv.yml
iac_init/templates/01-wipe_aci_fabric/aci_switch_reimage/files/: aci_switch_reiamge.sh  aci_switch_reiamge_sh_base64
iac_init/templates/01-wipe_aci_fabric/aci_switch_reimage/templates/: aci_switch_reimage.exp.jinja2  aci_switch_reimage_post_check.exp.jinja2
iac_init/templates/01-wipe_aci_fabric/aci_switch_reimage/vars/: main.yml
iac_init/templates/01-wipe_aci_fabric/apic_reimage/tasks/: main.yml
iac_init/templates/02-apic_init/: playbook_apic_discovery.yaml
iac_init/templates/03-nac_tasks/: inventory.yaml.j2
iac_init/templates/03-nac_tasks/aac_ansible/: apic_test.yaml
iac_init/templates/06-fabric_policy/group_vars/: aci.yaml.j2
iac_init/templates/07-access_policy/aac_ansible/: apic_deploy.yaml  apic_validate.yaml
iac_init/templates/09-smart_licensing/aac_ansible/: apic_deploy.yaml
iac_init/utils/: exceptions.py  functional.py
iac_init/yaml_conf/: iac_yaml.py  pyyaml.py  yaml.py  yaml_writer.py
iac_init_output_working_dir/05-aci_system_settings/: inventory.yaml
iac_init_output_working_dir/05-aci_system_settings/group_vars/: aci.yaml
iac_init_output_working_dir/05-aci_system_settings/host_vars/apic1/: 05-aci_system_settings.yml
tests/integration/: test_integration.py
tests/integration/fixtures/data/: 00-global_policy.yml  03-node_registration.yml  04-oob_mgmt.yml  05-aci_system_settings.yml
(+8 files in other folders)
